<resources>
    <string name="app_name">Mini Games Studio</string>

    <!-- Home page -->
    <string name="intro_home">Welcome to the Mini Games Studio app !</string>
    <string name="choose_path">It is time to choose your path</string>
    <string name="demineur_button">Minesweeper</string>
    <string name="dungeon_button">Escape Dungeon</string>
    <string name="achievements_button">Achievements</string>
    <string name="horse_button">Parcheesi</string>

    <!-- Achievement page -->
    <string name="best_scores">Best Scores !</string>
    <string name="reset_mine">Reset Minesweeper</string>
    <string name="reset_dungeon">Reset Escape Dungeon</string>
    <string name="menu_button">Menu</string>
    <string name="about_us">"About us : \nWe are a team of four engineering students : Lucile, Florian, Gabriel and Ines. \nWe hope you enjoy our app !"</string>
    <string name="bestScoreDiff1">"Difficulty 1"</string>
    <string name="bestScoreDiff2">"Difficulty 2"</string>
    <string name="bestScoreDiff3">"Difficulty 3"</string>
    <string name="defaultScore">"0"</string>

    <!-- Horse game page -->
    <string name="dice">Roll the dice !</string>
    <string name="wait_turn">Wait for your turn</string>
    <string name="choose_ai">Choose the number of AI</string>
    <string name="retry_choice">You have to choose a number of AI</string>
    <string name="game_won">has won the game !</string>
    <string name="you">You have won ! Great game</string>
    <string name="computer">The AI has won the game. Try again !</string>

    <!-- Horse settings page -->
    <string name="horse_settings_intro">"Please choose the number of computers you wish to play against"</string>
    <string name="button_rules_horses">Rules</string>
    <string name="rules_horses">"In this game, you will play against computer(s). You will play with the color Yellow. \nTo start the game, click on the dice. If your result is 6, you will be able to click on a pawn of your color. After each dice throw, your pawn will move accordingly.\nWhen your pawn has reached the end of the board, it needs to move onto the finish line. To reach the first case you need to get a 1, then for the second case a 2… To move out of the board and finish it\'s play, you need to roll a 6 once your horse is on the last case of the finish line. \nThe winner is the first player to get their four pawn up the finish line and out of the board. \nHope you enjoy !"</string>
    <string name="rules_title_horses">Game Rules</string>

    <!-- DungeonCard page -->
    <string name="alertDialogLevel">"Welcome to Escape Dungeon. Please choose the difficulty"</string>
    <string name="alertDialogLevel3">"difficulty 3                          "</string>
    <string name="alertDialogLevel1">"difficulty 1                          "</string>
    <string name="alertDialogLevel2">"difficulty 2                          "</string>

    <string name="textDifficulty">Game difficulty :</string>
    <string name="scoreText">Score :</string>
    <string name="textLevel">Level :</string>
    <string name="textpapvmax">hp / pa max :</string>
    <string name="buttonRules">Rules</string>
    <string name="savebutton">Save Game</string>

    <string name="alertDialogRules">"Game Rules : \nMove to the hearts to win hp and to weapons to win pa, use them to kill monsters. Getting a gold coin and killing a monster will earn you 10 points. \nEach 50 points you move up one level and the difficulty increases.\nNew weapons appear every four levels, and new monsters every two levels \nThe round arrows will earn you exchange points, shake your phone or click on the text \"Pt Exchange\" to use them, this will redistribute the cards. \nBe careful, you can only get 2 of them saved and you can't use them twice in a row. \nHave a good game !"</string>
    <string name="textChangeBox">"Exchange pts: "</string>

    <!-- MineSweeper strings -->
    <string name="textMinesweeperButton">Go to Minesweeper</string>
    <string name="textTimeElapsed">Time elapsed:</string>
    <string name="textScore">Score</string>
    <string name="bestScoreText">New best score</string>
    <string name="textMinesLeft">Flags left</string>
    <string name="textRestartButton">Restart</string>
    <string name="textDifficultyEASY">Easy</string>
    <string name="textDifficultyMEDIUM">Medium</string>
    <string name="textDifficultyHARD">Hard</string>
    <string name="soundButtonDescription">Toggle Sound</string>
    <string name="winMessage">YOU WON!</string>
    <string name="gameoverMessage">GAME OVER!</string>
    <string name="unsupportedMessage">unsupported case</string>
    <string name="okMessage">OK</string>

    <!-- Unused strings -->
    <string name="button_rules">Rules</string>

</resources>
