<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/jacques_francois_shadow"
        android:text="@string/intro_home"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/acme"
        android:text="@string/choose_path"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageButton
        android:id="@+id/demineurButton"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="40dp"
        android:scaleType="fitStart"
        app:layout_constraintEnd_toStartOf="@+id/dungeonButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/bomb" />

    <ImageButton
        android:id="@+id/dungeonButton"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="40dp"
        android:scaleType="fitStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/demineurButton"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/war" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/acme"
        android:text="@string/demineur_button"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="@+id/demineurButton"
        app:layout_constraintStart_toStartOf="@+id/demineurButton"
        app:layout_constraintTop_toBottomOf="@+id/demineurButton" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/acme"
        android:text="@string/dungeon_button"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="@+id/dungeonButton"
        app:layout_constraintStart_toStartOf="@+id/dungeonButton"
        app:layout_constraintTop_toBottomOf="@+id/dungeonButton" />

    <ImageButton
        android:id="@+id/achievementButton"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="40dp"
        android:scaleType="fitStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/trophy" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/acme"
        android:text="@string/achievements_button"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="@+id/achievementButton"
        app:layout_constraintStart_toStartOf="@+id/achievementButton"
        app:layout_constraintTop_toBottomOf="@+id/achievementButton" />

</androidx.constraintlayout.widget.ConstraintLayout>